--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nuxt": "^3.5.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "@vue-hero-icons/solid": "^1.7.2"
   }
 }
